--- a/includes/style.css
+++ b/includes/style.css
@@ -24,6 +24,7 @@ a{
     
     width: 1000px;
     margin: 0 auto;
+    background-color: #f5f5f5;
     
 }
 
@@ -61,7 +62,7 @@ header article{
 
 nav{
     height: 52px;
-    background-color: #999999;
+    background-color: #141414;
 }
 
 nav ul{
@@ -76,23 +77,28 @@ nav ul li{
     display: block;
     text-align: center;
     line-height: 40px;
-    color: #000000;
+    color: #ffffff;
     font-family: sans-serif;
     float: left;
 }
 
 nav ul li a{
-    color: #000000;
+    color: #FFFFFF;
     font-weight: bold;
 }
     
-nav li:hover {
-    background-color: #ddd;
-    color: black;
+nav li a:hover {  
+    color: #0B2CE9;
 }
 
+
+
 nav li:nth-child(5){
-    background-color: #999999;
+    background-color: #141414;
+}
+
+nav li:nth-child(6){
+    background-color: #141414;
 }
 
 nav input[type=text] {
@@ -261,7 +267,7 @@ article li a{
 
 footer{
     height: 80px;
-    background-color: #999999;
+    background-color: #141414;
 }
 
 footer ul{
