--- a/includes/style.css
+++ b/includes/style.css
@@ -138,22 +138,44 @@ nav .logout{
 	margin-left: 12px;
 }
 
+#breadcrumbs ul{
+    margin: 10px 0 0 120px;
+    color: #006ce5;
+}
+
+#breadcrumbs ul li{
+    display: inline;
+    margin-right: 3px;
+}
 main{
     height: 800px;
     position: relative;
 }
 
-main article .md-form{
+.loginform .md-form{
 	margin-left:20px;
 	width:200px;
 }
+
+.loginform .btn{
+	margin-left:80px;
+}
+
+.loginform:nth-child(2){
+	left:120px;
+}
+
+.loginform:nth-child(3){
+	left:608px;
+}
+
 
 main form{
 	width:500px;
 	height:650px;
 	position: absolute;
 	left:250px;
-	top:50px;
+	top:70px;
 	border: 1px solid #DDDDDD;	
 }
 
@@ -177,6 +199,7 @@ main form .progress{
 	height: 10px;
 	margin:auto;
 	border-radius: 7px;
+	border:1px solid #000000;
 }
 
 main form .progress .progress-bar{
@@ -184,11 +207,20 @@ main form .progress .progress-bar{
 	background-color: #aaaaaa;
 }
 
+h2{
+	margin-top:10px;
+	margin-left:120px;
+}
+
 h3{
 	text-align: center;
 	font-size: x-large;
+	margin-top:10px;
 }
 
+h4{
+	text-align: center;
+}
 .login{
 	width:263px;
 	height:280px;
@@ -197,12 +229,75 @@ h3{
 	top:200px;
 }
 
-main article:nth-child(1){
-	left:99px;
+.row{
+	width:1000px;
+	display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin:40px 15px 0 80px;
 }
 
-main article:nth-child(2){
-	left:608px;
+div .card{
+	 margin:10px 120px 60px 0;
+	 height: 230px;
+}
+
+div .card-body .btn{
+	margin:0 0 0px 60px;
+	padding: .375rem .75rem;
+	border-radius: .25rem;
+}
+
+div .card-body .btn-dark{
+	color: #fff;
+    background-color: #343a40;
+    border-color: #343a40;
+    width:50px;
+}
+
+
+#buttons button{
+	color:#000000 !important;
+	bottom:70px;
+	font-weight: 600;
+	float:left;
+	position:absolute;
+	border-radius: 10px;
+}
+
+#buttons button:nth-child(1){
+	left:250px;
+	background-color: #00C851;	
+}
+
+#buttons button:nth-child(2){	
+	left:560px;
+	background-color: #fbc02d;	
+}
+
+
+#popup{
+    border-radius: 6px;
+    color:#657B64;
+    font-size:larger;
+    background-color: #DEF0D8;
+    position: absolute;
+    width: 400px;
+    height: 160px;
+    top: 30%;
+    left: 30%;
+    visibility: hidden;
+}
+
+#popup .btn-default{
+	background-color: #00c851;
+	margin:40px 0 0 150px;
+	
+}
+
+#popup div{
+	margin-top:5px;
+	text-align: center;
 }
 
 .col-md-6{
@@ -268,22 +363,56 @@ footer{
     height: 80px;
     background-color: #141414;
 }
+footer section:nth-child(1){
+    margin-top: 16px;
+    margin-left: 20px;
+    float: left;
+    display: block;
+    width: 230px;
+}
 
-footer ul{
-    margin-top: 22px;
+footer section:nth-child(1) li{
+    list-style: none;
+}
+
+
+footer section:nth-child(1) a{
+    color: #FFFFFF;
+    list-style: none;
+}
+
+
+
+footer section:nth-child(1) li:nth-child(1){
+    font-weight: bold;
+    font-size: 150%;
+    margin-bottom: 10px;
+}
+
+
+
+footer section:nth-child(1) li:nth-child(2){
+    display: inline;
+}
+
+footer section:nth-child(1) li:nth-child(3){
+    display: inline;
+}
+footer section:nth-child(2){
+    margin-top: 16px;
     float: right;
     display: block;
     width: 230px;
 }
 
-footer ul li{
+footer section:nth-child(2) ul li{
     list-style: none;
     width: 57px;
     height: 50px;
     float: left;
 }
 
-footer ul li:nth-child(1) a{
+footer section:nth-child(2) ul li:nth-child(1) a{
     background-image: url(../images/facebook.png);
     background-repeat: no-repeat;
     width: 50px;
@@ -293,7 +422,7 @@ footer ul li:nth-child(1) a{
 }
 
 
-footer ul li:nth-child(2) a{
+footer section:nth-child(2) ul li:nth-child(2) a{
     background-image: url(../images/twitter.png);
     background-repeat: no-repeat;
     width: 50px;
@@ -302,7 +431,7 @@ footer ul li:nth-child(2) a{
     float: left;
 }
 
-footer ul li:nth-child(3) a{
+footer section:nth-child(2) ul li:nth-child(3) a{
     background-image: url(../images/google.png);
     background-repeat: no-repeat;
     width: 50px;
@@ -311,7 +440,7 @@ footer ul li:nth-child(3) a{
     float: left;
 }
 
-footer ul li:nth-child(4) a{
+footer section:nth-child(2) ul li:nth-child(4) a{
     background-image: url(../images/youtube.png);
     background-repeat: no-repeat;
     width: 50px;
@@ -322,8 +451,9 @@ footer ul li:nth-child(4) a{
 
 
 
-
-
+footer section{
+    float: left;
+}
 
 
 
