--- a/includes/style.css
+++ b/includes/style.css
@@ -22,7 +22,8 @@ a{
 
 #wrapper{
     
-    width: 1000px;
+    max-width: 1000px;
+    width:100%;
     margin: 0 auto;
     background-color: #f5f5f5;
     
@@ -30,7 +31,8 @@ a{
 
 header{
    // background-color: antiquewhite;
-    width: 1000px;
+    max-width: 1000px;
+    width:100%;
     height: 100px;
 }
 
@@ -38,7 +40,8 @@ header a{
     background-image: url(../images/logo.png);
     background-repeat: no-repeat;
     display: block;
-    width: 170px;
+    max-width: 170px;
+    width:17%;
     height: 96px;
     margin-left: 10px;  
     float: left;
@@ -72,7 +75,8 @@ nav ul{
 nav ul li{
     margin-top: 6px;
     margin-left: 5px;
-    width: 130px;
+    max-width: 130px;
+    width:20%;
     height: 40px;
     display: block;
     text-align: center;
@@ -129,7 +133,8 @@ nav .search-container button:hover {
 
 nav .search-container {
     float: left;
-    width:150px;;
+    max-width:150px;
+    width:100%;
     margin-left: 50px;
 }
 
@@ -154,7 +159,8 @@ main{
 
 .loginform .md-form{
 	margin-left:20px;
-	width:200px;
+	max-width:200px;
+	width:80%;
 }
 
 .loginform .btn{
@@ -169,9 +175,9 @@ main{
 	left:608px;
 }
 
-
 main form{
-	width:500px;
+	max-width:500px;
+	width:50%;
 	height:650px;
 	position: absolute;
 	left:250px;
@@ -181,7 +187,8 @@ main form{
 
 main form .md-form{
 	margin-left: 60px;
-	width:300px;
+	max-width:300px;
+	width:100%;
 }
 
 main form .fa{
@@ -222,7 +229,8 @@ h4{
 	text-align: center;
 }
 .login{
-	width:263px;
+	max-width:263px;
+	width:26.3%;
 	height:280px;
 	background-color: #e6e6e6;
 	position: absolute;
@@ -230,7 +238,8 @@ h4{
 }
 
 .row{
-	width:1000px;
+	max-width:1000px;
+	width:100%;
 	display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
@@ -252,7 +261,8 @@ div .card-body .btn-dark{
 	color: #fff;
     background-color: #343a40;
     border-color: #343a40;
-    width:50px;
+    max-width:50px;
+    width:50%;
 }
 
 
@@ -275,6 +285,10 @@ div .card-body .btn-dark{
 	background-color: #fbc02d;	
 }
 
+button a{
+	color:#000000;
+}
+
 
 #popup{
     border-radius: 6px;
@@ -282,7 +296,8 @@ div .card-body .btn-dark{
     font-size:larger;
     background-color: #DEF0D8;
     position: absolute;
-    width: 400px;
+    max-width: 400px;
+    width:40%;
     height: 160px;
     top: 30%;
     left: 30%;
@@ -304,6 +319,7 @@ div .card-body .btn-dark{
 	padding-top:10px;
 	margin-top:99px;
 	max-width:200px;
+	width:20%;
 	margin: 0 auto;
 	margin-top:50px;
 }
@@ -311,6 +327,7 @@ div .card-body .btn-dark{
 .col-md-4{
 	padding-top:10px;
 	max-width:200px;
+	width:20%;
 	margin: 0 auto;
 }
 
@@ -329,13 +346,15 @@ div .card-body .btn-dark{
 #personal_details{
 	margin-top:100px;
 	margin:0 auto;
-	width:397px;
+	max-width:397px;
+	width:39.7%;
 	height: 451px;
 }
 
 article button{
 	margin-left:38px;
-	width:190px;
+	width:19%;
+	max-width:190px;
 	height:20px;
 	border:#000000;
 	border-radius: 7px ;
@@ -345,7 +364,7 @@ article button{
 
 article li{
 	margin-left:38px;
-	width:190px;
+	max-width:190px;
 	height:20px;
 	border:#000000;
 	border-radius: 7px ;
@@ -358,6 +377,31 @@ article li{
 article li a{
 	color:#FFFFFF;
 }
+
+#plan{
+    overflow: hidden;
+}
+
+#plan article:nth-child(1){
+    margin-top: 70px;
+    margin-left: 70px;
+    float: left;
+}
+
+#plan article:nth-child(2){
+    margin-top: 70px;
+    margin-right: 70px;
+    float: right;
+
+}
+
+#plan article:nth-child(3){
+    margin-top: 70px;
+    margin-left: 70px;
+    float: left;
+    clear: left;
+}
+
 
 footer{
     height: 80px;
@@ -402,12 +446,14 @@ footer section:nth-child(2){
     margin-top: 16px;
     float: right;
     display: block;
-    width: 230px;
+    max-width: 230px;
+    width:23%;
 }
 
 footer section:nth-child(2) ul li{
     list-style: none;
-    width: 57px;
+    max-width: 57px;
+    width:57%;
     height: 50px;
     float: left;
 }
@@ -415,7 +461,8 @@ footer section:nth-child(2) ul li{
 footer section:nth-child(2) ul li:nth-child(1) a{
     background-image: url(../images/facebook.png);
     background-repeat: no-repeat;
-    width: 50px;
+    max-width: 50px;
+    width:100%;
     height: 50px;
     display: block;
     float: left;
@@ -425,7 +472,8 @@ footer section:nth-child(2) ul li:nth-child(1) a{
 footer section:nth-child(2) ul li:nth-child(2) a{
     background-image: url(../images/twitter.png);
     background-repeat: no-repeat;
-    width: 50px;
+    max-width: 50px;
+    width:100%;
     height: 50px;
     display: block;
     float: left;
@@ -434,7 +482,8 @@ footer section:nth-child(2) ul li:nth-child(2) a{
 footer section:nth-child(2) ul li:nth-child(3) a{
     background-image: url(../images/google.png);
     background-repeat: no-repeat;
-    width: 50px;
+    max-width: 50px;
+    width:100%;
     height: 50px;
     display: block;
     float: left;
@@ -443,7 +492,8 @@ footer section:nth-child(2) ul li:nth-child(3) a{
 footer section:nth-child(2) ul li:nth-child(4) a{
     background-image: url(../images/youtube.png);
     background-repeat: no-repeat;
-    width: 50px;
+    max-width: 50px;
+    width:100%;
     height: 50px;
     display: block;
     float: left;
@@ -455,10 +505,54 @@ footer section{
     float: left;
 }
 
+#costum{
+	max-width:1000px;
+	width:100%;
+	position: absolute;
+	top:80px;
+}
 
+.sidemenu{
+	margin:70px 0 0 120px;
+}
 
+.sidemenu ul{
+	list-style: none;
+	margin:0;	
+}
 
+.sidemenu ul li{
+	padding:15px;
+	position: relative;	
+	max-width:150px;
+	width:150%;
+	background-color: #616161;	
+	border-top:1px solid #BDC3C7;
+}
 
+.sidemenu ul ul{
+	transition: all 0.3s;
+	opacity: 0;
+	visibility: hidden;	
+	position: absolute;
+	left:100%;
+	top:0;
+	padding-left: 2px;
+}
+
+.sidemenu ul li:hover > ul{
+	opacity: 1;
+	visibility: visible;	
+}
+
+.sidemenu ul li:hover{
+	background-color: #AAAAAA;
+}
+
+.sidemenu ul li a{
+	color:black;
+	text-decoration: none;	
+}
 
 
 
